--- a/leisurely/MainWindow.xaml
+++ b/leisurely/MainWindow.xaml
@@ -5,10 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:leisurely"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525" WindowStyle="None" ResizeMode="NoResize">
-    <Grid>
-        <StackPanel>
-            <Label Height="35" Background="#FF5965B7" TextBlock.TextAlignment="Center" FontSize="18" FontFamily="Special Elite" Content="Testing" Foreground="#FFEA6363" FontWeight="ExtraBold" BorderThickness="1" ClipToBounds="True" SnapsToDevicePixels="True" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black"/>
-        </StackPanel>
+        Title="Leisurely" Height="350" Width="525" WindowStyle="None" ResizeMode="CanResizeWithGrip" BorderThickness="1,0,1,1" BorderBrush="Black" SnapsToDevicePixels="True" AllowsTransparency="True" Background="Transparent">
+    <Grid Background="White">
+        <Grid VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="9*" />
+                <ColumnDefinition Width="0.5*" />
+                <ColumnDefinition Width="0.5*" />
+
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0" Height="35" Background="#FF5965B7" TextBlock.TextAlignment="Center" FontSize="27" Content="Leisurely" Foreground="#FFEA6363" BorderThickness="0,1,1,1" ClipToBounds="True" SnapsToDevicePixels="True" BorderBrush="Black" MouseDown="Label_MouseDown" FontFamily="Medula One" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0"/>
+            <Label x:Name="minimize" Grid.Column="1" Height="35" Background="#FF5965B7" TextBlock.TextAlignment="Center" FontSize="22" FontFamily="Medula One" Content="-" Foreground="#FFEA6363" FontWeight="ExtraBold" BorderThickness="1" ClipToBounds="True" SnapsToDevicePixels="True" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" MouseEnter="Label_Hover" MouseLeave="Label_RemoveHover" Padding="0,2,0,0"/>
+            <Label x:Name="close" Grid.Column="2" Height="35" Background="#FF5965B7" TextBlock.TextAlignment="Center" FontSize="22" FontFamily="Medula One" Content="x" Foreground="#FFEA6363" FontWeight="ExtraBold" BorderThickness="1,1,0,1" ClipToBounds="True" SnapsToDevicePixels="True" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Padding="0,0,0,1" MouseEnter="Label_Hover" MouseLeave="Label_RemoveHover" MouseUp="CloseApplication" HorizontalAlignment="Right" Margin="0,0,0.2,0.2" Width="25" VerticalAlignment="Bottom"/>
+        </Grid>
     </Grid>
 </Window>
